# Otherengine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  BuildDocs.bat  CMakeLists.txt  CMakeSettings.json  Doxyfile  Folder.DotSettings  GenerateClang.sh  GenerateGCC.sh  GetCMake.sh  GetFMOD.sh  InstallDeps.sh  LICENSE  Otherengine.cmake  README.md  configure  sonar-project.properties
Source/: CMakeLists.txt
Source/Core/Private/: Config.cpp  EngineBase.cpp  Json.cpp  PlatformUnix.cpp
Source/Core/Public/: Core.hpp  JsonFwd.hpp  Path.hpp  Platform.hpp
Source/Core/Public/Templates/: HashMap.hpp  String.hpp
Source/Engine/Private/: InputCode.cpp  TimerManager.cpp  World.cpp
Source/Engine/Private/Actors/: Actor.cpp
Source/Engine/Private/Components/: CircleComponent.cpp  SpotLightComponent.cpp
Source/Engine/Public/: TimerManager.hpp
Source/Engine/Public/AI/: AIState.hpp
Source/Engine/Public/Actors/: DirLight.hpp
Source/Engine/Public/Components/: DirLightComponent.hpp  PointLightComponent.hpp
Source/Launch/: CMakeLists.txt
Source/Private/: Actor.cpp  Assert.cpp  Engine.cpp  InputSystem.cpp  Json.cpp  Log.cpp  Main.cpp  Name.cpp  Path.cpp  Rect.h  StringUtil.cpp  Thread.cpp  TimerManager.cpp  World.cpp
Source/Private/Actor/: Actor.cpp  Asteroid.cpp  Laser.cpp  Ship.cpp
Source/Private/Component/: AIComponent.cpp  ActorComponent.cpp  AnimSpriteComponent.cpp  BgSpriteComponent.cpp  CircleComponent.cpp  InputComponent.cpp  MoveComponent.cpp  PawnMoveComponent.cpp  SceneComponent.cpp  SpriteComponent.cpp  TilemapComponent.cpp
Source/Private/Components/: MeshComponent.cpp
Source/Private/Graphics/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp
Source/Programs/: CMakeLists.txt
Source/Programs/AssetImporter/: CMakeLists.txt
Source/Programs/AssetImporter/Private/: Main.cpp
Source/Public/: API.hpp  Actor.h  Actor.hpp  Assert.hpp  CompressedPair.hpp  Core.hpp  Engine.h  Engine.hpp  GameModule.hpp  InputSystem.h  InputSystem.hpp  Json.hpp  JsonFwd.hpp  Log.hpp  ManagedPtr.hpp  Math.hpp  MathCore.h  MathUtil.h  Matrix.hpp  Memory.hpp  Name.h  Name.hpp  Path.hpp  Rotation.h  StringUtil.hpp  Thread.hpp  TimeUtil.h  TimerManager.h  TimerManager.hpp  Transform.hpp  Vector.hpp  World.h  World.hpp
Source/Public/Actor/: Asteroid.h  Laser.h  Ship.h
Source/Public/Component/: AIState.h  BgSpriteComponent.h  CircleComponent.h  InputComponent.h  MoveComponent.h  SpriteComponent.h  TilemapComponent.h
Source/Public/Components/: AIComponent.h  AIComponent.hpp  AIState.h  AIState.hpp  ActorComponent.h  ActorComponent.hpp  AnimSpriteComponent.h  BgSpriteComponent.h  CircleComponent.hpp  InputComponent.h  InputComponent.hpp  MeshComponent.hpp  PawnMoveComponent.h  SceneComponent.hpp  SpriteComponent.h  SpriteComponent.hpp  TilemapComponent.h
Source/Public/Graphics/: Renderer.h  Renderer.hpp  VertexArray.h
Source/Public/Templates/: DyArr.hpp  HashMap.hpp  HashSet.hpp  Memory.hpp  Monitor.hpp  SharedPtr.hpp  String.hpp  TreeMap.hpp  TreeSet.hpp  Vector.hpp  Wrapper.hpp
Source/Renderer/: CMakeLists.txt
Source/Renderer/Public/: Renderer.hpp  VertexArray.hpp
Source/Renderer/Public/Interfaces/: Camera.hpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/Core/: CMakeLists.txt
Source/Runtime/Core/Private/: Config.cpp  ConfigSystem.cpp  Core.cpp  CoreUnix.cpp  CoreWindows.cpp  Debug.cpp  EngineBase.cpp  Json.cpp  Log.cpp  Memory.cpp  Name.cpp  Object.cpp  Path.cpp  Platform.cpp  PlatformUnix.cpp  PlatformWin.cpp  PlatformWindows.cpp  Stat.cpp  String.cpp
Source/Runtime/Core/Private/Interfaces/: IEngine.cpp
Source/Runtime/Core/Private/Object/: Factory.cpp
Source/Runtime/Core/Private/Serialization/: ArchiveFileReader.cpp
Source/Runtime/Core/Public/: API.hpp  Assert.hpp  Asset.hpp  Config.hpp  ConfigSystem.hpp  Core.hpp  Debug.hpp  EngineBase.hpp  File.hpp  Format.hpp  GameModule.hpp  Json.hpp  JsonFwd.hpp  Log.hpp  Math.hpp  MathFwd.hpp  Memory.hpp  Name.hpp  Object.hpp  Path.hpp  Platform.hpp  Stat.hpp
Source/Runtime/Core/Public/Interfaces/: Base.hpp  Engine.hpp  IEngine.hpp
Source/Runtime/Engine/: CMakeLists.txt
Source/Runtime/Engine/Private/: AssetManager.cpp  Engine.cpp  IRenderer.cpp  InputCode.cpp  InputSystem.cpp  TimerManager.cpp  World.cpp
Source/Runtime/Engine/Public/: AssetManager.hpp  Engine.hpp  EngineCore.hpp  EngineFwd.hpp  IRenderer.hpp  InputCode.hpp  InputSystem.hpp  TimerManager.hpp  World.hpp  pch.hpp
Source/Runtime/Game/: CMakeLists.txt  Main.cpp
Source/Runtime/Game/Private/: Main.cpp
Source/Runtime/GameFramework/: CMakeLists.txt
Source/Runtime/Launch/: CMakeLists.txt  Launch.cpp
Source/Runtime/OpenGLDrv/: CMakeLists.txt
Source/Runtime/OpenGLDrv/Private/: OpenGLDynamicRHI.cpp  OpenGLMesh.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLWindow.cpp
Source/Runtime/OpenGLDrv/Public/: OpenGLDynamicRHI.hpp  OpenGLMesh.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp  OpenGLWindow.hpp
Source/Runtime/RHI/: CMakeLists.txt
Source/Runtime/RHI/Private/: DynamicRHI.cpp  RHIMesh.cpp  RHIShader.cpp  RHIWindow.cpp  ShaderParam.cpp  Texture.cpp  VertexArray.cpp
Source/Runtime/RHI/Public/: DynamicRHI.hpp  RHIMesh.hpp  RHIResource.hpp  RHIShader.hpp  RHITexture.hpp  RHIWindow.hpp  Shader.hpp  ShaderParam.hpp  Texture.hpp  Uniform.hpp  Vertex.hpp  VertexArray.hpp
Source/Runtime/RenderCore/: CMakeLists.txt
Source/Runtime/RenderCore/Public/: Mesh.hpp  Shader.hpp  VertexArray.hpp
Source/Runtime/Renderer/: CMakeLists.txt
Source/Runtime/Renderer/Private/: Material.cpp  Material.hpp  Mesh.cpp  OpenGL.hpp  Renderer.cpp  Shader.cpp  Texture.cpp  Texture.hpp  VertexArray.cpp  Window.cpp
Source/Runtime/Renderer/Public/: Material.hpp  Mesh.hpp  Renderer.hpp  RendererFwd.hpp  Shader.hpp  Texture.hpp  Uniform.hpp  VertexArray.hpp  Window.hpp  pch.hpp
Source/Tests/: CMakeLists.txt  MemoryBench.cpp  MemoryPoolTest.cpp  SharedPtrTest.cpp  TestMain.cpp
include/: Actor.h  (+29 more)
(+3005 files in other folders)
